dfuse/telos-testnet/firehose/telos-testnet-firehose.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telos-testnet-firehose
  namespace: dfuse
  labels:
    app: dfuse
    env: telos-testnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dfuse
      env: telos-testnet
  template:
    metadata:
      namespace: dfuse
      labels:
        app: dfuse
        env: telos-testnet
    spec:
      serviceAccountName: dfuse-service-account
      serviceAccount: dfuse/dfuse-service-account
      containers:
      - name: dfuse-eosio
        image: dfuse/dfuse-eosio:fecbcd4
        imagePullPolicy: IfNotPresent
        command: ["/app/dfuseeos"]
        args: ["start", "-c", "/config/firehose.yaml","-d","run/firehose","-vv"]
        ports:
        - containerPort: 9000
          name: grpc
          protocol: TCP
        volumeMounts:
        - name: telos-testnet-firehose
          mountPath: /config/firehose.yaml
          subPath: firehose.yaml
        - name: dfuse-service-account-token-jsp6h
          readOnly: true
          mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      volumes:
      - name: telos-testnet-firehose
        configMap:
          name: telos-testnet-firehose
      - name: dfuse-service-account-token-jsp6h
        secret:
          secretName: dfuse-service-account-token-jsp6h
          defaultMode: 420
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/app-protocols: '{"grpc":"HTTP2"}'
  name: firehose-telos-testnet
  namespace: dfuse
  labels:
    app: dfuse
    end: telos-testnet
spec:
  type: ClusterIP
  ports:
  - name: grpc
    port: 9000
    targetPort: 9000    
    protocol: TCP
  selector:
    app: dfuse
    env: telos-testnet
# ---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: telos-testnet-firehose
#   namespace: dfuse
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     cert-manager.io/cluster-issuer: letsencrypt-prod
#     nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
#     # nginx.ingress.kubernetes.io/ssl-redirect: "true"
#     # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
# spec:
#   tls: 
#   - hosts:
#     - fh-test.tekit.io
#     secretName: fh-test-tekit-tls 
#   rules:
#   - host: fh-test.tekit.io
#     http:
#       paths:
#       - backend:
#           serviceName: firehose-telos-testnet
#           servicePort: grpc
